; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_video_driver_gpu_record_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_video_driver_gpu_record_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@video_driver_record_gpu_buffer = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @video_driver_gpu_record_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @video_driver_gpu_record_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @malloc(i32 %4)
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** @video_driver_record_gpu_buffer, align 8
  %7 = load i32*, i32** @video_driver_record_gpu_buffer, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
